Update Privacy Policy from TRAK to VOLIA

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRAK - Privacy Policy</title>
+    <title>VOLIA - Privacy Policy</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <h1>Privacy Policy for TRAK</h1>
+    <h1>Privacy Policy for VOLIA</h1>
 
     <div class="meta">
         <strong>Last Updated:</strong> October 27, 2025<br>
@@ -61,7 +61,7 @@
     </div>
 
     <h2>Introduction</h2>
-    <p>TRAK ("we," "our," or "the app") is committed to protecting your privacy. This Privacy Policy explains how we handle your personal information when you use our workout tracking application.</p>
+    <p>VOLIA ("we," "our," or "the app") is committed to protecting your privacy. This Privacy Policy explains how we handle your personal information when you use our workout tracking application.</p>
 
     <p><strong>Key Points:</strong></p>
     <ul>
@@ -74,7 +74,7 @@
     <h2>Information We Collect</h2>
 
     <h3>1. Workout Data</h3>
-    <p>When you use TRAK to track your workouts, we store the following information <strong>locally on your device</strong>:</p>
+    <p>When you use VOLIA to track your workouts, we store the following information <strong>locally on your device</strong>:</p>
     <ul>
         <li>Exercise names, sets, reps, and weights</li>
         <li>Workout dates and duration</li>
@@ -85,7 +85,7 @@
     <p><strong>Purpose:</strong> To track your fitness progress and provide personalized workout recommendations.</p>
 
     <h3>2. HealthKit Data</h3>
-    <p>With your explicit permission, TRAK may access the following data from Apple Health:</p>
+    <p>With your explicit permission, VOLIA may access the following data from Apple Health:</p>
     <ul>
         <li>Workout history</li>
         <li>Heart rate data during workouts</li>
@@ -179,7 +179,7 @@
         <li><strong>Delete individual workouts</strong> - Swipe to delete in workout history</li>
         <li><strong>Clear all workouts</strong> - Settings → Developer Options → Clear all workout data</li>
         <li><strong>Reset everything</strong> - Settings → Developer Options → Reset ALL data</li>
-        <li><strong>Delete the app</strong> - Uninstalling TRAK permanently deletes all local data</li>
+        <li><strong>Delete the app</strong> - Uninstalling VOLIA permanently deletes all local data</li>
     </ul>
     <p><strong>Important:</strong> Workouts saved to Apple Health must be deleted separately through the Health app.</p>
 
@@ -188,15 +188,15 @@
     <ol>
         <li>Open iOS Settings</li>
         <li>Go to Health → Data Access & Devices</li>
-        <li>Select TRAK</li>
+        <li>Select VOLIA</li>
         <li>Toggle off data types you want to revoke</li>
     </ol>
 
     <h2>Children's Privacy</h2>
-    <p>TRAK does not knowingly collect information from children under 13. The app is designed for users who can safely perform strength training exercises. If you believe a child has provided information through the app, please contact us.</p>
+    <p>VOLIA does not knowingly collect information from children under 13. The app is designed for users who can safely perform strength training exercises. If you believe a child has provided information through the app, please contact us.</p>
 
     <h2>HealthKit Specific Privacy</h2>
-    <p>TRAK uses Apple's HealthKit framework and adheres to Apple's strict privacy requirements:</p>
+    <p>VOLIA uses Apple's HealthKit framework and adheres to Apple's strict privacy requirements:</p>
     <ul>
         <li><strong>Explicit consent required</strong> - We ask for your permission before accessing any HealthKit data</li>
         <li><strong>Granular permissions</strong> - You control exactly which data types we can access</li>
@@ -218,12 +218,12 @@
     <h2>Data Retention</h2>
     <ul>
         <li><strong>Workout data</strong> - Retained indefinitely on your device unless you delete it</li>
-        <li><strong>HealthKit data</strong> - Retained according to Apple Health's policies (separate from TRAK)</li>
-        <li><strong>App deletion</strong> - All local data is permanently deleted when you uninstall TRAK</li>
+        <li><strong>HealthKit data</strong> - Retained according to Apple Health's policies (separate from VOLIA)</li>
+        <li><strong>App deletion</strong> - All local data is permanently deleted when you uninstall VOLIA</li>
     </ul>
 
     <h2>International Users</h2>
-    <p>TRAK is available worldwide. Since all data is stored locally on your device:</p>
+    <p>VOLIA is available worldwide. Since all data is stored locally on your device:</p>
     <ul>
         <li>No data crosses international borders</li>
         <li>No data is subject to foreign jurisdiction</li>
@@ -231,7 +231,7 @@
     </ul>
 
     <h2>Third-Party Services</h2>
-    <p>TRAK does <strong>not</strong> use any third-party services except:</p>
+    <p>VOLIA does <strong>not</strong> use any third-party services except:</p>
     <ul>
         <li><strong>Apple HealthKit</strong> - For reading/writing workout data (with your permission)</li>
         <li><strong>Apple Maps</strong> - For displaying workout routes (location used only when granted)</li>
@@ -264,7 +264,7 @@
         <li>Data portability (export your data)</li>
         <li>Object to data processing</li>
     </ul>
-    <p>Since TRAK stores all data locally on your device, you exercise these rights directly through the app without needing to contact us.</p>
+    <p>Since VOLIA stores all data locally on your device, you exercise these rights directly through the app without needing to contact us.</p>
 
     <h3>Your CCPA Rights (California Users)</h3>
     <p>If you are a California resident, you have the right to:</p>
@@ -292,7 +292,7 @@
     <hr>
 
     <p style="text-align: center; color: #666;">
-        <strong>TRAK</strong> - Your workout data, your device, your control.<br>
+        <strong>VOLIA</strong> - Your workout data, your device, your control.<br>
         <em>This Privacy Policy was last updated on October 27, 2025.</em>
     </p>
 
